--- a/index.html
+++ b/index.html
@@ -1,101 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome | Moscoso Maximiliano</title>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <!-- Optional Font -->
-	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Montserrat:600&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="main.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Welcome | Moscoso Maximiliano</title>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+  <!-- Optional Font -->
+  <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Montserrat:600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="main.css">
 
 </head>
+
 <body>
 
-	<header id="home">
-		<div class="menu-toggler">
-			<div class="bar half start"></div>
-			<div class="bar"></div>
-			<div class="bar half end"></div>
-		</div>
-		<nav class="top-nav">
-			<ul class="nav-list">
-				<li>
-					<a href="#home" class="nav-link">Home</a>
-				</li>
+  <header id="home">
+    <div class="menu-toggler">
+      <div class="bar half start"></div>
+      <div class="bar"></div>
+      <div class="bar half end"></div>
+    </div>
+    <nav class="top-nav">
+      <ul class="nav-list">
         <li>
-					<a href="#about" class="nav-link">About</a>
-				</li>
+          <a href="#home" class="nav-link">Home</a>
+        </li>
         <li>
-					<a href="#languages" class="nav-link">Languages</a>
-				</li>
-				<li>
-					<a href="#portfolio" class="nav-link">Portfolio</a>
-				</li>
-				<li>
-					<a href="#services" class="nav-link">Service</a>
-				</li>
-				<li>
-					<a href="#experience" class="nav-link">Experience</a>
-				</li>
-				<li>
-					<a href="#contact" class="nav-link">Contact</a>
-				</li>
-			</ul>
-		</nav>
+          <a href="#about" class="nav-link">About</a>
+        </li>
+        <li>
+          <a href="#languages" class="nav-link">Languages</a>
+        </li>
+        <li>
+          <a href="#portfolio" class="nav-link">Portfolio</a>
+        </li>
+        <li>
+          <a href="#services" class="nav-link">Service</a>
+        </li>
+        <li>
+          <a href="#experience" class="nav-link">Experience</a>
+        </li>
+        <li>
+          <a href="#contact" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </nav>
 
-		<div class="landing-text" >
-			<h1>Moscoso</h1>
-			<h1>Maximiliano</h1>
-			<h6>Unity Programmer | Game Design | Web Development</h6>
-		</div>
-	</header>
+    <div class="landing-text">
+      <h1>Moscoso</h1>
+      <h1>Maximiliano</h1>
+      <h6>Unity Programmer | Game Design | Web Development</h6>
+    </div>
+  </header>
 
-	<section class="about" id="about">
-		<div class="container">
-			<div class="profile-img wrap" data-aos="fade-right" data-aos-delay="50">
-				<img class="profile-img" src="images/profile.jpeg" alt="">
-			</div>
-			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="50">
-				<div class="about-heading">
-					<h1>Sobre</h1>
-					<h6>Mi</h6>
-				</div>
-				<p>
-					Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 5 en programación.
-				</p>
-				<div class="social-media">
-					<ul class="nav-list">
-						<li>
-							<a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber" class="icon-link">
-								<i class="fab fa-youtube"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://twitter.com/MoscosoMaxi" class="icon-link">
-								<i class="fab fa-twitter"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://www.instagram.com/maxi_moscoso/?hl=es-la" class="icon-link">
-								<i class="fab fa-instagram"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://github.com/MoscosoMaximiliano" class="icon-link">
-								<i class="fab fa-github"></i>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
+  <section class="about" id="about">
+    <div class="container">
+      <div class="profile-img wrap" data-aos="fade-right" data-aos-delay="50">
+        <img class="profile-img" src="images/profile.jpeg" alt="">
+      </div>
+      <div class="about-details wrap" data-aos="fade-left" data-aos-delay="50">
+        <div class="about-heading">
+          <h1>Sobre</h1>
+          <h6>Mi</h6>
+        </div>
+        <p>
+          Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 6 en programación para aplicaciones y web.
+        </p>
+        <div class="social-media">
+          <ul class="nav-list">
+            <li>
+              <a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber" class="icon-link">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/MoscosoMaxi" class="icon-link">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/maxi_moscoso/?hl=es-la" class="icon-link">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/MoscosoMaximiliano" class="icon-link">
+                <i class="fab fa-github"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
 
 
-		</div>
-	</section>
+    </div>
+  </section>
 
   <section class="languages" id="languages">
     <div class="container">
@@ -104,186 +106,187 @@
         <h6>Mis años de uso de lenguaje de programación</h6>
       </div>
       <div class="languages-skills">
-        <li class="html">html             <center>2 Years</center></li>
-        <li class="css">css               <center>1 Year</center></li>
-        <li class="php">php               <center>1 Year</center></li>
-        <li class="js">js                 <center>1 Year</center></li>
-        <li class="csharp">c#             <center>4 Years</center></li>
-        <li class="python">python         <center>2 Years</center></li>
+        <li class="html">html <center>2 Years</center></li>
+        <li class="css">css <center>1 Year</center></li>
+        <li class="php">php <center>1 Year</center></li>
+        <li class="js">js <center>1 Year</center></li>
+        <li class="csharp">c# <center>4 Years</center></li>
+        <li class="python">python <center>2 Years</center></li>
       </div>
     </div>
   </section>
 
 
-	<section class="portfolio" id="portfolio">
-		<div class="container">
-			<div class="section-heading">
-				<h1>Portfolio</h1>
-				<h6>Algunos de mis recientes trabajos</h6>
-			</div>
-			<div class="portfolio-item" >
-				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
-					<img class="game-img" src="https://img.itch.zone/aW1nLzI1NjEwODEucG5n/347x500/N%2FVEWf.png" alt="">
-				</div>
-				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
-					<h6>itch.io</h6>
-					<h1>Cardboard Words</h1>
-					<p>
-						Hecho en la Ludum Dare
-					</p>
-					<a href="https://nyxas.itch.io/cardboard-words" class="cta">Jugar</a>
-				</div>
-			</div>
+  <section class="portfolio" id="portfolio">
+    <div class="container">
+      <div class="section-heading">
+        <h1>Portfolio</h1>
+        <h6>Algunos de mis recientes trabajos</h6>
+      </div>
+      <div class="portfolio-item">
+        <div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
+          <img class="game-img" src="https://img.itch.zone/aW1nLzI1NjEwODEucG5n/347x500/N%2FVEWf.png" alt="">
+        </div>
+        <div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
+          <h6>itch.io</h6>
+          <h1>Cardboard Words</h1>
+          <p>
+            Hecho en la Ludum Dare
+          </p>
+          <a href="https://nyxas.itch.io/cardboard-words" class="cta">Jugar</a>
+        </div>
+      </div>
 
-			<div class="portfolio-item">
-				<div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
-					<h6>itch.io</h6>
-					<h1>A Seed Thousand Lives</h1>
-					<p>
-						Hecho en la Weekly Game Jam
-					</p>
-					<a href="https://nyxas.itch.io/aseedthousandlives" class="cta">Jugar</a>
-				</div>
-				<div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="300">
-					<img class="game-img" src="https://img.itch.zone/aW1nLzI1MjM3MTQucG5n/original/8vR7YZ.png" alt="">
-				</div>
-			</div>
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
+          <h6>itch.io</h6>
+          <h1>A Seed Thousand Lives</h1>
+          <p>
+            Hecho en la Weekly Game Jam
+          </p>
+          <a href="https://nyxas.itch.io/aseedthousandlives" class="cta">Jugar</a>
+        </div>
+        <div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="300">
+          <img class="game-img" src="https://img.itch.zone/aW1nLzI1MjM3MTQucG5n/original/8vR7YZ.png" alt="">
+        </div>
+      </div>
 
-			<div class="portfolio-item">
-				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
-					<img class="game-img" src="https://ggj.s3.amazonaws.com/styles/game_sidebar__narrow/featured_image/2019/01/189728/menu0000.png?itok=LmlN9BIh&timestamp=1548610626" alt="">
-				</div>
-				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
-					<h6>Global Game Jam</h6>
-					<h1>The Place Where We Used</h1>
-					<p>
-						Hecho durante la Global Game Jam 2019
-					</p>
-					<a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">Jugar</a>
-				</div>
-			</div>
-		</div>
-	</section>
+      <div class="portfolio-item">
+        <div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
+          <img class="game-img" src="https://ggj.s3.amazonaws.com/styles/game_sidebar__narrow/featured_image/2019/01/189728/menu0000.png?itok=LmlN9BIh&timestamp=1548610626" alt="">
+        </div>
+        <div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
+          <h6>Global Game Jam</h6>
+          <h1>The Place Where We Used</h1>
+          <p>
+            Hecho durante la Global Game Jam 2019
+          </p>
+          <a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">Jugar</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-	<section class="services" id="services">
-		<div class="container">
-			<div class="section-heading">
-				<h1>Aptitudes</h1>
-				<h6>¿En que destaco?</h6>
-			</div>
-			<div class="my-skills">
-				<div class="skill wrap" data-aos="fade" data-aos-delay="150">
-					<div class="icon-container">
-						<i class="fas fa-code"></i>
-					</div>
-					<h1>Eficacia</h1>
-					<p>
-						Orden en las tareas, cumpliendo en tiempo y forma, orientado a la calidad.
-					</p>
-				</div>
+  <section class="services" id="services">
+    <div class="container">
+      <div class="section-heading">
+        <h1>Aptitudes</h1>
+        <h6>¿En que destaco?</h6>
+      </div>
+      <div class="my-skills">
+        <div class="skill wrap" data-aos="fade" data-aos-delay="150">
+          <div class="icon-container">
+            <i class="fas fa-code"></i>
+          </div>
+          <h1>Eficacia</h1>
+          <p>
+            Orden en las tareas, cumpliendo en tiempo y forma, orientado a la calidad.
+          </p>
+        </div>
 
-				<div class="skill wrap" data-aos="fade" data-aos-delay="300">
-					<div class="icon-container">
-						<i class="fas fa-chart-bar"></i>
-					</div>
-					<h1>Trabajo en equipo</h1>
-					<p>
-						Comunicación con el equipo para un mejor flujo de trabajo.
-					</p>
-				</div>
+        <div class="skill wrap" data-aos="fade" data-aos-delay="300">
+          <div class="icon-container">
+            <i class="fas fa-chart-bar"></i>
+          </div>
+          <h1>Trabajo en equipo</h1>
+          <p>
+            Comunicación con el equipo para un mejor flujo de trabajo.
+          </p>
+        </div>
 
-				<div class="skill wrap" data-aos="fade" data-aos-delay="450">
-					<div class="icon-container">
-						<i class="fas fa-code"></i>
-					</div>
-					<h1>Predisposición</h1>
-					<p>
-						Busqueda de aprendizaje, actualización y mejora constante en todos los ambitos.
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
+        <div class="skill wrap" data-aos="fade" data-aos-delay="450">
+          <div class="icon-container">
+            <i class="fas fa-code"></i>
+          </div>
+          <h1>Predisposición</h1>
+          <p>
+            Busqueda de aprendizaje, actualización y mejora constante en todos los ambitos.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-	<section class="experiences" id="experiences">
-		<div class="container">
-			<div class="section-heading">
-				<h1>Experiencias de trabajo</h1>
-				<h6>Viejos y actuales trabajos</h6>
-			</div>
-			<div class="timeline">
-				<ul>
-					<li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="150">
-						<h1>-</h1>
-						<p>
-							-
-						</p>
-					</li>
+  <section class="experiences" id="experiences">
+    <div class="container">
+      <div class="section-heading">
+        <h1>Experiencias de trabajo</h1>
+        <h6>Viejos y actuales trabajos</h6>
+      </div>
+      <div class="timeline">
+        <ul>
+          <li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="150">
+            <h1>-</h1>
+            <p>
+              -
+            </p>
+          </li>
 
-					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="300">
-						<h1>Espacio de Desarrollo Tecnologico y Laboral - EDTL TDF</h1>
-						<p>
-							Programador generalista y Co - Level Designer en el desarrollo del videojuego "Base Chat"
-						</p>
-					</li>
+          <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="300">
+            <h1>Espacio de Desarrollo Tecnologico y Laboral - EDTL TDF</h1>
+            <p>
+              Programador generalista y Co - Level Designer en el desarrollo del videojuego "Base Chat"
+            </p>
+          </li>
 
-					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="450">
-						<h1>Puerto Global</h1>
-						<p>
-							Programador generalista de proyectos.
-						</p>
-					</li>
+          <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="450">
+            <h1>Puerto Global</h1>
+            <p>
+              Programador generalista de proyectos.
+            </p>
+          </li>
 
-					<li class="date wrap" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="600">
-						<h1>-</h1>
-						<p>
-							-
-						</p>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</section>
+          <li class="date wrap" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="600">
+            <h1>-</h1>
+            <p>
+              -
+            </p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-	<section class="contact" id="contact">
-		<div class="container">
-			<div class="section-heading">
-				<h1>Contactame</h1>
-				<h6>Trabajemos juntos</h6>
-			</div>
-			<form class="wrap" action="https://formspree.io/mdoewkzk" method="POST" data-aos="fade-up" data-aos-delay="300">
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name" placeholder="Enter your name" requiered>
+  <section class="contact" id="contact">
+    <div class="container">
+      <div class="section-heading">
+        <h1>Contactame</h1>
+        <h6>Trabajemos juntos</h6>
+      </div>
+      <form class="wrap" action="https://formspree.io/mdoewkzk" method="POST" data-aos="fade-up" data-aos-delay="300">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" requiered>
 
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="_replyto" placeholder="Enter your email" requiered>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="_replyto" placeholder="Enter your email" requiered>
 
-				<!-- <label for="service">Services:</label>
+        <!-- <label for="service">Services:</label>
 				<select name="service" id="service">
 					<option value="">Web Design</option>
 					<option value="">Web Development</option>
 					<option value="">All</option>
 				</select> -->
 
-				<label for="subject">Message:</label>
-				<textarea name="message" id="message" cols="10" rows="10"></textarea>
-				<center><input type="submit" name="submit" value="Send"></center>
-			</form>
-			<!-- <div class="box-email">
+        <label for="subject">Message:</label>
+        <textarea name="message" id="message" cols="10" rows="10"></textarea>
+        <center><input type="submit" name="submit" value="Send"></center>
+      </form>
+      <!-- <div class="box-email">
 				<h1 class="text-email" data-aos="zoom-in" data-aos-delay="150">moscosomaximiliano@gmail.com</h1>
 			</div> -->
-		</div>
-	</section>
+    </div>
+  </section>
 
-	<footer class="copyright">
-		<div class="up" id="up">
-			<i class="fas fa-chevron-up"></i>
-		</div>
-		<p>&copy; 2020 Moscoso Maximiliano</p>
-	</footer>
+  <footer class="copyright">
+    <div class="up" id="up">
+      <i class="fas fa-chevron-up"></i>
+    </div>
+    <p>&copy; 2020 Moscoso Maximiliano</p>
+  </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
