--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Welcome | Moscoso Maximiliano</title>
+  <title>Moscoso Maximiliano</title>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
@@ -29,22 +29,22 @@
           <a href="#home" class="nav-link">Home</a>
         </li>
         <li>
-          <a href="#about" class="nav-link">About</a>
+          <a href="#about" class="nav-link">Acerca</a>
         </li>
         <li>
-          <a href="#languages" class="nav-link">Languages</a>
+          <a href="#languages" class="nav-link">Lenguajes</a>
         </li>
         <li>
           <a href="#portfolio" class="nav-link">Portfolio</a>
         </li>
         <li>
-          <a href="#services" class="nav-link">Service</a>
+          <a href="#services" class="nav-link">Aptitudes</a>
         </li>
         <li>
-          <a href="#experience" class="nav-link">Experience</a>
+          <a href="#experience" class="nav-link">Experiencias</a>
         </li>
         <li>
-          <a href="#contact" class="nav-link">Contact</a>
+          <a href="#contact" class="nav-link">Contactame</a>
         </li>
       </ul>
     </nav>
@@ -106,12 +106,14 @@
         <h6>Mis años de uso de lenguaje de programación</h6>
       </div>
       <div class="languages-skills">
-        <li class="html">html <center>2 Years</center></li>
-        <li class="css">css <center>1 Year</center></li>
-        <li class="php">php <center>1 Year</center></li>
-        <li class="js">js <center>1 Year</center></li>
-        <li class="csharp">c# <center>4 Years</center></li>
-        <li class="python">python <center>2 Years</center></li>
+        <li class="html">html <center>2 Años</center></li>
+        <li class="css">css <center>1 Años</center></li>
+        <li class="php">php <center>1 Años</center></li>
+        <li class="js">js <center>1 Años</center></li>
+        <li class="csharp">c# <center>4 Años</center></li>
+        <li class="python">Python <center>2 Años</center></li>
+        <li class="mysql">MySQL <center>2 Años</center></li>
+        <li class="java">Java <center>3 Años</center></li>
       </div>
     </div>
   </section>
@@ -167,7 +169,7 @@
     </div>
   </section>
 
-  <section class="services" id="services">
+  <section class="aptitude" id="aptitude">
     <div class="container">
       <div class="section-heading">
         <h1>Aptitudes</h1>
