--- a/index.html
+++ b/index.html
@@ -125,6 +125,23 @@
         <h1>Portfolio</h1>
         <h6>Algunos de mis recientes trabajos</h6>
       </div>
+
+      <div class="portfolio-item">
+        <div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
+          <img class="game-img" src="" alt="Punch-Repair-VR-image">
+        </div>
+        <div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
+          <h6>Global Game Jam</h6>
+          <h1>Punch Repair VR</h1>
+          <p>
+            Hecho en la Global Game Jam 2020
+
+            Debes reparar todos los muebles con tus preciados puños... Y un poco de ira.
+          </p>
+          <a href="https://nyxas.itch.io/punch-repair-vr" class="cta">Jugar</a>
+        </div>
+      </div>
+
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
           <img class="game-img" src="https://img.itch.zone/aW1nLzI1NjEwODEucG5n/347x500/N%2FVEWf.png" alt="">
@@ -134,6 +151,8 @@
           <h1>Cardboard Words</h1>
           <p>
             Hecho en la Ludum Dare
+
+            Habla con las personas de la ciudad para conseguir dinero y asi mejorar tu humilde casa de cartón.
           </p>
           <a href="https://nyxas.itch.io/cardboard-words" class="cta">Jugar</a>
         </div>
@@ -145,6 +164,8 @@
           <h1>A Seed Thousand Lives</h1>
           <p>
             Hecho en la Weekly Game Jam
+
+            Eres una semilla y para sobrevivir debes de ir de planta en planta hasta encontrar un lugar donde puedas vivir.
           </p>
           <a href="https://nyxas.itch.io/aseedthousandlives" class="cta">Jugar</a>
         </div>
@@ -162,6 +183,8 @@
           <h1>The Place Where We Used</h1>
           <p>
             Hecho durante la Global Game Jam 2019
+
+            Visitas la casa de tus padres y tienes un reencuentro con tu pasado.
           </p>
           <a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">Jugar</a>
         </div>
