Fixed position new game

--- a/index.html
+++ b/index.html
@@ -125,12 +125,9 @@
         <h1>Portfolio</h1>
         <h6>Algunos de mis recientes trabajos</h6>
       </div>
-
+      
       <div class="portfolio-item">
-        <div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
-          <img class="game-img" src="" alt="Punch-Repair-VR-image">
-        </div>
-        <div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
           <h6>Global Game Jam</h6>
           <h1>Punch Repair VR</h1>
           <p>
@@ -139,6 +136,9 @@
             Debes reparar todos los muebles con tus preciados puños... Y un poco de ira.
           </p>
           <a href="https://nyxas.itch.io/punch-repair-vr" class="cta">Jugar</a>
+        </div>
+        <div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="300">
+          <img class="game-img" src="" alt="Punch-Repair-VR-image">
         </div>
       </div>
 
