--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <h1>Portfolio</h1>
         <h6>Algunos de mis recientes trabajos</h6>
       </div>
-      
+
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
           <h6>Global Game Jam</h6>
@@ -138,7 +138,7 @@
           <a href="https://nyxas.itch.io/punch-repair-vr" class="cta">Jugar</a>
         </div>
         <div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="300">
-          <img class="game-img" src="" alt="Punch-Repair-VR-image">
+          <img class="game-img" src="https://img.itch.zone/aW1nLzI5NTE4NTAucG5n/347x500/gKTUBl.png" alt="">
         </div>
       </div>
 
