updated portfolio section

--- a/index.html
+++ b/index.html
@@ -127,6 +127,77 @@
       </div>
 
       <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
+          <center>
+            <iframe src="https://itch.io/embed/615816" height="167" width="552" frameborder="1">
+              <a href="https://nyxas.itch.io/carry-alive-it">Carry Alive It by Moscoso Maximiliano
+              </a>
+            </iframe>
+          </center>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
+          <center>
+            <iframe src="https://itch.io/embed/603656" height="167" width="552" frameborder="0">
+              <a href="https://nyxas.itch.io/tableav">Tableauval by Moscoso Maximiliano, Chinigami</a>
+            </iframe>
+          </center>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
+          <center>
+            <iframe src="https://itch.io/embed/561124" height="167" width="552" frameborder="0">
+              <a href="https://nyxas.itch.io/punch-repair-vr">Punch Repair VR by Moscoso Maximiliano</a>
+            </iframe>
+          </center>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
+          <center>
+            <iframe src="https://itch.io/embed/495512" height="167" width="552" frameborder="0">
+              <a href="https://nyxas.itch.io/cardboard-words">Cardboard Words by Moscoso Maximiliano, Chinigami</a>
+            </iframe>
+          </center>
+        </div>
+      </div>
+
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
+          <center>
+            <iframe src="https://itch.io/embed/488460" height="167" width="552" frameborder="0">
+              <a href="https://nyxas.itch.io/aseedthousandlives">A Seed Thousand Lives by Moscoso Maximiliano</a>
+            </iframe>
+          </center>
+        </div>
+      </div>
+
+
+      <!--
+
+
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
+          <h6>Ludum Dare 46</h6>
+          <h1>Carry Alive It</h1>
+          <p>
+            Hecho en la Ludum Dare 46
+
+            Tu novia se encuentra enferma y tu objetivo es llevarla al hospital
+          </p>
+          <a href="https://nyxas.itch.io/carry-alive-it" class="cta">Jugar</a>
+        </div>
+        <div class="portfolio-img wrap" data-aos="fade-right" data-aos-delay="300">
+          <img class="game-img" src="https://img.itch.zone/aW1nLzI5NTE4NTAucG5n/347x500/gKTUBl.png" alt="">
+        </div>
+      </div>
+
+      <div class="portfolio-item">
         <div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
           <h6>Global Game Jam</h6>
           <h1>Punch Repair VR</h1>
@@ -190,6 +261,8 @@
         </div>
       </div>
     </div>
+
+    -->
   </section>
 
   <section class="aptitude" id="aptitude">
