--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section class="about" id="about">
     <div class="container">
       <div class="profile-img wrap" data-aos="fade-right" data-aos-delay="50">
-        <img class="profile-img" src="images/profile.jpeg" alt="">
+        <img class="profile-img" src="images/profile.jpg" alt="">
       </div>
       <div class="about-details wrap" data-aos="fade-left" data-aos-delay="50">
         <div class="about-heading">
