--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 6 en programación para aplicaciones y web.
         </p>
         <div class="social-media">
-          <ul class="nav-list">
+          <ul class="nav-list-social">
             <li>
               <a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber" class="icon-link">
                 <i class="fab fa-youtube"></i>
