Added multi language and fixed some images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,24 @@
 </head>
 
 <body>
-
+  <center><h4 id="lang-WIP">Actualmente esta en WIPaaa</h4></center>
   <header id="home">
+    <div class="languages-font">
+      <div class="language-font">
+        <a href="#" onclick="setLanguage('es')">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/ES.png" alt="ES">
+          <h3>Español</h3>
+        </a>
+      </div>
+      <div class="language-font">
+        <a href="#" onclick="setLanguage('en')">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/US.png" alt="EN">
+          <h3>English</h3>
+        </a>
+      </div>
+    </div>
+
+
     <div class="menu-toggler">
       <div class="bar half start"></div>
       <div class="bar"></div>
@@ -26,32 +42,32 @@
     <nav class="top-nav">
       <ul class="nav-list">
         <li>
-          <a href="#home" class="nav-link">Home</a>
+          <a href="#home" class="nav-link" id="">Inicio</a>
         </li>
         <li>
-          <a href="#about" class="nav-link">Acerca</a>
+          <a href="#about" class="nav-link" id="">Acerca</a>
         </li>
         <li>
-          <a href="#languages" class="nav-link">Lenguajes</a>
+          <a href="#languages" class="nav-link" id="">Lenguajes</a>
         </li>
         <li>
-          <a href="#portfolio" class="nav-link">Portfolio</a>
+          <a href="#portfolio" class="nav-link" id="">Portfolio</a>
         </li>
         <li>
-          <a href="#services" class="nav-link">Aptitudes</a>
+          <a href="#services" class="nav-link" id="">Aptitudes</a>
         </li>
         <li>
-          <a href="#experience" class="nav-link">Experiencias</a>
+          <a href="#experience" class="nav-link" id="">Experiencias</a>
         </li>
         <li>
-          <a href="#contact" class="nav-link">Contactame</a>
+          <a href="#contact" class="nav-link" id="">Contactame</a>
         </li>
       </ul>
     </nav>
 
     <div class="landing-text">
-      <h1>Moscoso</h1>
-      <h1>Maximiliano</h1>
+      <h1 id="">Moscoso</h1>
+      <h1 id="">Maximiliano</h1>
       <h6>Unity Programmer | Game Design | Web Development</h6>
     </div>
   </header>
@@ -63,10 +79,10 @@
       </div>
       <div class="about-details wrap" data-aos="fade-left" data-aos-delay="50">
         <div class="about-heading">
-          <h1>Sobre</h1>
-          <h6>Mi</h6>
+          <h1 id="">Sobre</h1>
+          <h6 id="">Mi</h6>
         </div>
-        <p>
+        <p id="">
           Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 6 en programación para aplicaciones y web.
         </p>
         <div class="social-media">
@@ -102,18 +118,18 @@
   <section class="languages" id="languages">
     <div class="container">
       <div class="section-heading">
-        <h1>Conocimientos de programación</h1>
-        <h6>Mis años de uso de lenguaje de programación</h6>
+        <h1 id="">Conocimientos de programación</h1>
+        <h6 id="">Mis años de uso de lenguaje de programación</h6>
       </div>
       <div class="languages-skills">
-        <li class="html">html <center>2 Años</center></li>
-        <li class="css">css <center>1 Años</center></li>
-        <li class="php">php <center>1 Años</center></li>
-        <li class="js">js <center>1 Años</center></li>
-        <li class="csharp">c# <center>4 Años</center></li>
-        <li class="python">Python <center>2 Años</center></li>
-        <li class="mysql">MySQL <center>2 Años</center></li>
-        <li class="java">Java <center>3 Años</center></li>
+        <li class="html">html <center id="">2 Años</center></li>
+        <li class="css">css <center id="">1 Años</center></li>
+        <li class="php">php <center id="">1 Años</center></li>
+        <li class="js">js <center id="">1 Años</center></li>
+        <li class="csharp">c# <center id="">4 Años</center></li>
+        <li class="python">Python <center id="">2 Años</center></li>
+        <li class="mysql">MySQL <center id="">2 Años</center></li>
+        <li class="java">Java <center id="">3 Años</center></li>
       </div>
     </div>
   </section>
@@ -123,13 +139,13 @@
     <div class="container">
       <div class="section-heading">
         <h1>Portfolio</h1>
-        <h6>Algunos de mis recientes trabajos</h6>
+        <h6 id="">Algunos de mis recientes trabajos</h6>
       </div>
 
       <div class="portfolio-item">
         <div class="portfolio-description has-margin-right wrap" data-aos="fade-left" data-aos-delay="150">
           <center>
-            <iframe src="https://itch.io/embed/615816" height="167" width="552" frameborder="1">
+            <iframe src="https://itch.io/embed/615816" height="167" width="552" frameborder="0">
               <a href="https://nyxas.itch.io/carry-alive-it">Carry Alive It by Moscoso Maximiliano
               </a>
             </iframe>
@@ -268,16 +284,16 @@
   <section class="aptitude" id="aptitude">
     <div class="container">
       <div class="section-heading">
-        <h1>Aptitudes</h1>
-        <h6>¿En que destaco?</h6>
+        <h1 id="">Aptitudes</h1>
+        <h6 id="">¿En que destaco?</h6>
       </div>
       <div class="my-skills">
         <div class="skill wrap" data-aos="fade" data-aos-delay="150">
           <div class="icon-container">
             <i class="fas fa-code"></i>
           </div>
-          <h1>Eficacia</h1>
-          <p>
+          <h1 id="">Eficacia</h1>
+          <p id="">
             Orden en las tareas, cumpliendo en tiempo y forma, orientado a la calidad.
           </p>
         </div>
@@ -286,8 +302,8 @@
           <div class="icon-container">
             <i class="fas fa-chart-bar"></i>
           </div>
-          <h1>Trabajo en equipo</h1>
-          <p>
+          <h1 id="">Trabajo en equipo</h1>
+          <p id="">
             Comunicación con el equipo para un mejor flujo de trabajo.
           </p>
         </div>
@@ -296,8 +312,8 @@
           <div class="icon-container">
             <i class="fas fa-code"></i>
           </div>
-          <h1>Predisposición</h1>
-          <p>
+          <h1 id="">Predisposición</h1>
+          <p id="">
             Busqueda de aprendizaje, actualización y mejora constante en todos los ambitos.
           </p>
         </div>
@@ -308,35 +324,35 @@
   <section class="experiences" id="experiences">
     <div class="container">
       <div class="section-heading">
-        <h1>Experiencias de trabajo</h1>
-        <h6>Viejos y actuales trabajos</h6>
+        <h1 id="">Experiencias de trabajo</h1>
+        <h6 id="">Viejos y actuales trabajos</h6>
       </div>
       <div class="timeline">
         <ul>
           <li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="150">
             <h1>-</h1>
-            <p>
+            <p id="">
               -
             </p>
           </li>
 
           <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="300">
             <h1>Espacio de Desarrollo Tecnologico y Laboral - EDTL TDF</h1>
-            <p>
+            <p id="">
               Programador generalista y Co - Level Designer en el desarrollo del videojuego "Base Chat"
             </p>
           </li>
 
           <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="450">
             <h1>Puerto Global</h1>
-            <p>
+            <p id="">
               Programador generalista de proyectos.
             </p>
           </li>
 
           <li class="date wrap" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="600">
             <h1>-</h1>
-            <p>
+            <p id="">
               -
             </p>
           </li>
@@ -348,14 +364,14 @@
   <section class="contact" id="contact">
     <div class="container">
       <div class="section-heading">
-        <h1>Contactame</h1>
-        <h6>Trabajemos juntos</h6>
+        <h1 id="">Contactame</h1>
+        <h6 id="">Trabajemos juntos</h6>
       </div>
       <form class="wrap" action="https://formspree.io/mdoewkzk" method="POST" data-aos="fade-up" data-aos-delay="300">
-        <label for="name">Name:</label>
+        <label for="name" id="">Nombre:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name" requiered>
 
-        <label for="email">Email:</label>
+        <label for="email" id="">Email:</label>
         <input type="email" id="email" name="_replyto" placeholder="Enter your email" requiered>
 
         <!-- <label for="service">Services:</label>
@@ -365,7 +381,7 @@
 					<option value="">All</option>
 				</select> -->
 
-        <label for="subject">Message:</label>
+        <label for="subject" id="">Mensaje:</label>
         <textarea name="message" id="message" cols="10" rows="10"></textarea>
         <center><input type="submit" name="submit" value="Send"></center>
       </form>
