Added change page and keep position

--- a/index-en.html
+++ b/index-en.html
@@ -20,7 +20,7 @@
   <header id="home">
     <div class="languages-font">
       <div class="language-font">
-        <a href="index.html" >
+        <a href="#" onclick="ChangePage('index.html')">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/ES.png" alt="ES">
           <h3>Spanish</h3>
         </a>
