--- a/index-en.html
+++ b/index-en.html
@@ -83,7 +83,9 @@
           <h6 >Me</h6>
         </div>
         <p >
-          Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 6 en programación para aplicaciones y web.
+          Born in Río Grande, Tierra Del Fuego, Argentina. 23 years old.
+          Currently studying software development.
+          3 years of experience in Unity and 6 years of experience in programming apps and webs.
         </p>
         <div class="social-media">
           <ul class="nav-list-social">
@@ -118,8 +120,8 @@
   <section class="languages" id="languages">
     <div class="container">
       <div class="section-heading">
-        <h1 >Conocimientos de programación</h1>
-        <h6 >Mis años de uso de lenguaje de programación</h6>
+        <h1 >Programming knowledge</h1>
+        <h6 >Years using programming language</h6>
       </div>
       <div class="languages-skills">
         <li class="html">HTML <center >2 Years</center></li>
@@ -139,7 +141,7 @@
     <div class="container">
       <div class="section-heading">
         <h1>Portfolio</h1>
-        <h6 >Algunos de mis recientes trabajos</h6>
+        <h6 >Some of my recent projects/work </h6>
       </div>
 
       <div class="portfolio-item">
@@ -285,7 +287,7 @@
     <div class="container">
       <div class="section-heading">
         <h1 >Aptitudes</h1>
-        <h6 >¿En que destaco?</h6>
+        <h6 >Highlights</h6>
       </div>
       <div class="my-skills">
         <div class="skill wrap" data-aos="fade" data-aos-delay="150">
@@ -294,7 +296,7 @@
           </div>
           <h1 >Effectiveness</h1>
           <p >
-            Orden en las tareas, cumpliendo en tiempo y forma, orientado a la calidad.
+            Work organization, accomplishment in time and in the agreed way, quality oriented.
           </p>
         </div>
 
@@ -304,7 +306,7 @@
           </div>
           <h1 >Teamwork</h1>
           <p >
-            Comunicación con el equipo para un mejor flujo de trabajo.
+            Communication skills in group work for better fluency.
           </p>
         </div>
 
@@ -314,7 +316,7 @@
           </div>
           <h1 >Predisposition</h1>
           <p >
-            Busqueda de aprendizaje, actualización y mejora constante en todos los ambitos.
+            Always seeking knowledge to learn, constant improvement and upgrade in all ambits.
           </p>
         </div>
       </div>
@@ -339,14 +341,14 @@
           <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="300">
             <h1>Espacio de Desarrollo Tecnologico y Laboral - EDTL TDF</h1>
             <p >
-              Programador generalista y Co - Level Designer en el desarrollo del videojuego "Base Chat"
+              General programmer and Co- Level designer in “Base Chat” game development.
             </p>
           </li>
 
           <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="450">
             <h1>Puerto Global</h1>
             <p >
-              Programador generalista de proyectos.
+              General project programmer.
             </p>
           </li>
 
