--- a/index-en.html
+++ b/index-en.html
@@ -287,7 +287,7 @@
     <div class="container">
       <div class="section-heading">
         <h1 >Aptitudes</h1>
-        <h6 >Highlights</h6>
+        <h6 >In which things do I stand out?</h6>
       </div>
       <div class="my-skills">
         <div class="skill wrap" data-aos="fade" data-aos-delay="150">
