--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 </head>
 
 <body>
-  <center><h4>WIP</h4></center>
+  <center><h4 id="lang-WIP">WIP</h4></center>
   <header id="home">
     <div class="languages-font">
-      <!-- <div class="language-font">
-        <a href="#" onclick="setLanguage('es')">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/ES.png" alt="ES">
-          <h3>Español</h3>
-        </a>
-      </div> -->
       <div class="language-font">
-        <a href="#" onclick="ChangePage('index-en.html')">
+        <a href="#" onclick="ChangePage('index.html')">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/ES.png" alt="ES">
+          <h3>Spanish</h3>
+        </a>
+      </div>
+      <!-- <div class="language-font">
+        <a href="#" onclick="setLanguage('en')">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/US.png" alt="EN">
           <h3>English</h3>
         </a>
-      </div>
+      </div> -->
     </div>
 
 
@@ -42,13 +42,13 @@
     <nav class="top-nav">
       <ul class="nav-list">
         <li>
-          <a href="#home" class="nav-link" >Inicio</a>
+          <a href="#home" class="nav-link" >Home</a>
         </li>
         <li>
-          <a href="#about" class="nav-link" >Acerca</a>
+          <a href="#about" class="nav-link" >About me</a>
         </li>
         <li>
-          <a href="#languages" class="nav-link" >Lenguajes</a>
+          <a href="#languages" class="nav-link" >Languages</a>
         </li>
         <li>
           <a href="#portfolio" class="nav-link" >Portfolio</a>
@@ -57,10 +57,10 @@
           <a href="#services" class="nav-link" >Aptitudes</a>
         </li>
         <li>
-          <a href="#experience" class="nav-link" >Experiencias</a>
+          <a href="#experience" class="nav-link" >Experiences</a>
         </li>
         <li>
-          <a href="#contact" class="nav-link" >Contactame</a>
+          <a href="#contact" class="nav-link" >Contact me</a>
         </li>
       </ul>
     </nav>
@@ -68,7 +68,7 @@
     <div class="landing-text">
       <h1 >Moscoso</h1>
       <h1 >Maximiliano</h1>
-      <h6>Unity Programmer | Programador Junior | Web Development</h6>
+      <h6>Unity Programmer | Junior Programmer | Web Development</h6>
     </div>
   </header>
 
@@ -79,11 +79,13 @@
       </div>
       <div class="about-details wrap" data-aos="fade-left" data-aos-delay="50">
         <div class="about-heading">
-          <h1 >Sobre</h1>
-          <h6 >Mi</h6>
+          <h1 >About</h1>
+          <h6 >Me</h6>
         </div>
         <p >
-          Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 6 en programación para aplicaciones y web.
+          Born in Río Grande, Tierra Del Fuego, Argentina. 23 years old.
+          Currently studying software development.
+          3 years of experience in Unity and 6 years of experience in programming apps and webs.
         </p>
         <div class="social-media">
           <ul class="nav-list-social">
@@ -118,18 +120,18 @@
   <section class="languages" id="languages">
     <div class="container">
       <div class="section-heading">
-        <h1 >Conocimientos de programación</h1>
-        <h6 >Mis años de uso de lenguaje de programación</h6>
+        <h1 >Programming knowledge</h1>
+        <h6 >Years using programming language</h6>
       </div>
       <div class="languages-skills">
-        <li class="html">HTML <center >2 Años</center></li>
-        <li class="css">CSS <center >1 Años</center></li>
-        <li class="php">PHP <center >1 Años</center></li>
-        <li class="js">Javascript <center >1 Años</center></li>
-        <li class="csharp">c# <center >4 Años</center></li>
-        <li class="python">Python <center >2 Años</center></li>
-        <li class="mysql">MySQL <center >2 Años</center></li>
-        <li class="java">Java <center >3 Años</center></li>
+        <li class="html">HTML <center >2 Years</center></li>
+        <li class="css">CSS <center >1 Years</center></li>
+        <li class="php">PHP <center >1 Years</center></li>
+        <li class="js">Javascript <center >1 Years</center></li>
+        <li class="csharp">c# <center >4 Years</center></li>
+        <li class="python">Python <center >2 Years</center></li>
+        <li class="mysql">MySQL <center >2 Years</center></li>
+        <li class="java">Java <center >3 Years</center></li>
       </div>
     </div>
   </section>
@@ -139,7 +141,7 @@
     <div class="container">
       <div class="section-heading">
         <h1>Portfolio</h1>
-        <h6 >Algunos de mis recientes trabajos</h6>
+        <h6 >Some of my recent projects/work </h6>
       </div>
 
       <div class="portfolio-item">
@@ -285,16 +287,16 @@
     <div class="container">
       <div class="section-heading">
         <h1 >Aptitudes</h1>
-        <h6 >¿En que destacó?</h6>
+        <h6 >In which things do I stand out?</h6>
       </div>
       <div class="my-skills">
         <div class="skill wrap" data-aos="fade" data-aos-delay="150">
           <div class="icon-container">
             <i class="fas fa-code"></i>
           </div>
-          <h1 >Eficacia</h1>
+          <h1 >Effectiveness</h1>
           <p >
-            Orden en las tareas, cumpliendo en tiempo y forma, orientado a la calidad.
+            Work organization, accomplishment in time and in the agreed way, quality oriented.
           </p>
         </div>
 
@@ -302,9 +304,9 @@
           <div class="icon-container">
             <i class="fas fa-chart-bar"></i>
           </div>
-          <h1 >Trabajo en equipo</h1>
+          <h1 >Teamwork</h1>
           <p >
-            Comunicación con el equipo para un mejor flujo de trabajo.
+            Communication skills in group work for better fluency.
           </p>
         </div>
 
@@ -312,9 +314,9 @@
           <div class="icon-container">
             <i class="fas fa-code"></i>
           </div>
-          <h1 >Predisposición</h1>
+          <h1 >Predisposition</h1>
           <p >
-            Búsqueda de aprendizaje, actualización y mejora constante en todos los ámbitos.
+            Always seeking knowledge to learn, constant improvement and upgrade in all ambits.
           </p>
         </div>
       </div>
@@ -324,8 +326,8 @@
   <section class="experiences" id="experiences">
     <div class="container">
       <div class="section-heading">
-        <h1 >Experiencias de trabajo</h1>
-        <h6 >Viejos y actuales trabajos</h6>
+        <h1 >Work experiences</h1>
+        <h6 >Old and current jobs</h6>
       </div>
       <div class="timeline">
         <ul>
@@ -339,14 +341,14 @@
           <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="300">
             <h1>Espacio de Desarrollo Tecnologico y Laboral - EDTL TDF</h1>
             <p >
-              Programador generalista y Co - Level Designer en el desarrollo del videojuego "Base Chat"
+              General programmer and Co- Level designer in “Base Chat” game development.
             </p>
           </li>
 
           <li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="450">
             <h1>Puerto Global</h1>
             <p >
-              Programador generalista de proyectos.
+              General project programmer.
             </p>
           </li>
 
@@ -364,11 +366,11 @@
   <section class="contact" id="contact">
     <div class="container">
       <div class="section-heading">
-        <h1 >Contactame</h1>
-        <h6 >Trabajemos juntos</h6>
+        <h1 >Contact me</h1>
+        <h6 >Let's work together</h6>
       </div>
       <form class="wrap" action="https://formspree.io/mdoewkzk" method="POST" data-aos="fade-up" data-aos-delay="300">
-        <label for="name" >Nombre:</label>
+        <label for="name" >Name:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name" requiered>
 
         <label for="email" >Email:</label>
@@ -381,7 +383,7 @@
 					<option value="">All</option>
 				</select> -->
 
-        <label for="subject" >Mensaje:</label>
+        <label for="subject" >Message:</label>
         <textarea name="message" id="message" cols="10" rows="10"></textarea>
         <center><input type="submit" name="submit" value="Send"></center>
       </form>
