--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
       </div> -->
       <div class="language-font">
-        <a href="#" onclick="ChangePage('index.html')">
+        <a href="#" onclick="ChangePage('index-es.html')">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/US.png" alt="EN">
           <h3>English</h3>
         </a>
