--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div> -->
       <div class="language-font">
         <a href="#" onclick="ChangePage('index-es.html')">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/US.png" alt="EN">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/93048/ES.png" alt="ES">
           <h3>English</h3>
         </a>
       </div>
